<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">CryptoSMS</string>
    <string name="item_contacts_sending_keys">Sending handshake...</string>
    <string name="item_contacts_waiting_for_reply">Waiting for confirmation...</string>
    <string name="item_contacts_keys_exchanged">Encryption active</string>
<string name="item_contacts_sending_confirmation">Accepting handshake...</string>
    <string name="item_contacts_keys_error">Error! Encryption data not found</string>
    <string name="tab_conversations">Conversations</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_contacts_new_contact">New contact</string>
    <string name="tab_contacts_new_contact_details">Establish new secure connection</string>
    <string name="conversation_type_to_compose">Type to compose</string>
    <string name="send">Send</string>
    <string name="contacts_type_home">Home</string>
    <string name="contacts_type_work">Work</string>
    <string name="contacts_type_mobile">Mobile</string>
    <string name="contacts_pick_phone_number">Pick phone number</string>
    <string name="contacts_no_phone_numbers">No phone numbers</string>
    <string name="contacts_no_phone_numbers_details">The selected contact does not have any phone numbers assigned to it.</string>
    <string name="ok">OK</string>
    <string name="error_database">An error has occured while working with the encrypted storage file.</string>
    <string name="conversation_no_keys">Secure connection</string>
    <string name="conversation_no_keys_details">A secure connection has not yet been established between the current SIM card and the chosen phone number. You can view the conversation history in read-only mode, but you have to set up a secure connection if you want to send text messages.</string>
    <string name="read_only">Read only</string>
    <string name="setup">Setup</string>
    <string name="error_no_sim_number">SIM number unavailable</string>
    <string name="error_no_sim_number_details">Unfortunately, Android was not able to determine the phone number of your current SIM card. This tends to happen with new SIM cards, e.g. after changing the carrier. Do you want to import existing encrypted sessions to this SIM card?</string>
    <string name="error_no_sim_available">No SIM available</string>
    <string name="error_no_sim_available_details">No SIM card is present in the handset or the Airplane mode is switched on. You will only be able to read the history of conversations.</string>
    <string name="tab_contacts_not_available">Not available</string>
    <string name="tab_contacts_not_available_details">Insert SIM or switch off the Airplane mode</string>
    <string name="cancel">Cancel</string>
    <string name="to_market">Open Market</string>
    <string name="error_market_unavailable">Android Market unavailable</string>
    <string name="error_market_unavailable_details">An error occured while trying to open the Android Market. Try installing Public Key Infractructure manually.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error_no_sim_number_import">Select the phone number you want to move to current SIM</string>
    <string name="error_no_sim_number_import_none">Cancel</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="menu_move_sessions">Move sessions</string>
    <string name="menu_move_sessions_none">None available</string>
    <string name="menu_move_sessions_none_details">No transferable sessions were found in the database.</string>
    <string name="sending">Sending...</string>
    <string name="error_sms_service">Error</string>
    <string name="error_sms_service_details">The application was unable to send the text message.</string>
    <string name="error_sending_unknown">Unknown problem</string>
    <string name="error_sending_generic">Generic failure</string>
    <string name="error_sending_no_service">No service</string>
    <string name="error_sending_null_pdu">Null PDU</string>
    <string name="error_sending_radio_off">Radio off</string>
    <string name="notification_ticker">New message</string>
    <string name="notification_title">CryptoSMS</string>
    <string name="notification_text">New messages</string>
    <string name="pki_install_message">CryptoSMS is dependent on the Public Key Infrastructure application, which is currently not installed on your device or a problem has occured while connecting to it.</string>
    <string name="quit">Quit</string>
    <string name="pki_install_title">PKI unavailable</string>
    <string name="try_again">Try again</string>
    <string name="pki_waiting_title">Waiting for PKI</string>
    <string name="pki_waiting_details">Connecting to the PKI...</string>
    <string name="logged_out">You are logged out. Log in to use this application.</string>
    <string name="log_in">Log in</string>
    <string name="disconnected_message">The connection to Public Key Infrastructure has been lost.</string>
    <string name="reconnect">Reconnect</string>
    <string name="fatal_exception_message">A fatal error has occurred which prevents you from using the application. Please report this problem.</string>
    <string name="report">Report</string>
    <string name="report_subject">CryptoSMS Report</string>
    <string name="send_email_report">Send report via email</string>
    <string name="pki_contact_picker_empty">There are not any people with public keys assigned to them. Please use the Public Keys application to exchange them.</string>
    <string name="exchange_method_title">Encryption setup</string>
    <string name="exchange_method_details">&quot;Please select a means of transferring cryptographic keys used for the encryption of text messages to the selected contact. These will be encrypted with the recipient's public key saved in PKI and signed with your private key.&quot;</string>
    <string name="exchange_method_text_message">Text message</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="exchange_text_details">The cryptographic keys will be sent via one text message.</string>
    <string name="exchange_text_warning">Warning: Standard text messaging rates apply</string>
    <string name="exchange_text_count">Message count:</string>
    <string name="reset_encryption">Reset encryption</string>
    <string name="invalidate_encryption">Invalidate encryption</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="timeout">Timeout</string>
    <string name="invalidate_confirm">Do you really want to invalidate this encryption session?</string>
    <string name="pki_key_picker_empty">There are not any public keys assigned to this person. Please use the Public Keys application to store them.</string>
    <string name="menu_process_pending">Process pending</string>
    <string name="tab_notifications">Notifications</string>
    <string name="clear_pending">Clear pending</string>
    <string name="clear_pending_details">Delete all messages waiting to be processed</string>
    <string name="loading">Loading...</string>
    <string name="parse_ok_keys_message">Handshake request</string>
    <string name="parse_corrupted_data">Corrupted data</string>
    <string name="parse_could_not_decrypt">Could not decrypt</string>
    <string name="parse_could_not_verify">Authentication failed</string>
    <string name="parse_missing_parts">Data incomplete...</string>
    <string name="parse_no_session_keys">Encryption not active</string>
    <string name="parse_redundant_parts">Redundant data</string>
    <string name="parse_unknown_sender">Unknown sender</string>
    <string name="discard">Discard</string>
    <string name="accept_and_confirm">Accept and confirm</string>
    <string name="accept_and_confirm_details">The handshake will be accepted and a confirming text message sent back.</string>
    <string name="parse_internal_error">Internal error</string>
    <string name="parse_ok_confirm_message">Handshake confirmation</string>
    <string name="notifications_clear_pending">Discard notification</string>
    <string name="notifications_clear_pending_details">Do you really want to discard this notification?</string>
    <string name="notifications_clear_all_pending">Clear pending notifications</string>
    <string name="notifications_clear_all_pending_details">Do you really want to clear all the pending notifications?</string>
    <string name="parse_timestamp_in_future">Time stamp in the future</string>
    <string name="parse_timestamp_old">Handshake expired</string>
    <string name="me">Me</string>
    <string name="corrupted_file_message">The storage file cannot be decrypted or the data is corrupted. The master password is stored in PKI, so you can try fixing that first.</string>
    <string name="delete_file">Delete file</string>
    <string name="item_contacts_keys_expired">Key expired</string>
    <string name="conversation_key_expired">Key expired</string>
    <string name="conversation_key_expired_details">Your cryptographic key has expired. Please set up the encryption again.</string>
</resources>