<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout1"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_weight="1.0" android:layout_width="fill_parent" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/pki_install_message" android:text="@string/pki_install_message" android:layout_height="wrap_content"></TextView>
    <Button android:id="@+id/pki_install_button_market" android:text="@string/to_market" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/pki_install_button_try_again" android:text="@string/try_again"></Button>
</LinearLayout>
